# prumysl-40-sim-plc

./: .gitignore  README.md  pyproject.toml  test_opc_client.py
File-Help/: Prompt.txt
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  machine.py  sensor.py
app/routers/: __init__.py  api.py  dashboard.py  machines.py  sensors.py  simulation.py
app/services/: __init__.py  value_generator.py
app/simulators/: __init__.py  base.py  manager.py  modbus_tcp.py  opc_ua.py
app/static/css/: custom.css
app/templates/: base.html  dashboard.html
app/templates/partials/: machine_card.html  machine_form.html  machine_list.html  sensor_form.html  sensor_list.html  sensor_row.html  status_badge.html
data/: config.sqlite
