[project]
name = "pumysl40-plc-sim"
version = "0.1.0"
description = "PLC simulátor pro Industry 4.0 - OPC UA a Modbus TCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "asyncua>=1.1.5",
    "pymodbus>=3.7.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
plc-sim = "app.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
